# dupload

./: .gitignore  CMakeLists.txt  dUpload.icns  dUpload.pri  dUpload.pro  dUpload.qrc  dUpload.rc  dUpload.sln  dUpload.vcproj  dUpload.vcxproj  dexternal.cpp  dexternal.h  dgallery.cpp  dgallery.h  dgallery.ui  dglobalhotkey.cpp  dglobalhotkey.h  dhighlighter.cpp  dhighlighter.h  dhighlighter.ui  dlast.cpp  dlast.h  dlast.ui  dlasts.cpp  dlasts.h  dlasts.ui  dpreview.cpp  dpreview.h  dpreview.ui  droparea.cpp  droparea.h  dtaskbar.cpp  dtaskbar.h  dtrayicon.cpp  dtrayicon.h  dupload.cpp  dupload.h  dupload.ui  main.cpp
resources/: Info.plist  dUpload.icns  dUpload.qrc  dUpload.rc
src/: dareaselector.cpp  dareaselector.h  ddesktopmanager.cpp  ddesktopmanager.h  ddll.cpp  ddll.h  dexternal.cpp  dexternal.h  dfile.cpp  dfile.h  dfilter.cpp  dfilter.h  dfilter_abstract.cpp  dfilter_abstract.h  dfilter_monochrome.cpp  dfilter_monochrome.h  dfilterinterface.h  dgallery.cpp  dgallery.h  dglobalhotkey.cpp  dglobalhotkey.h  dhighlighter.cpp  dhighlighter.h  dimageview.cpp  dimageview.h  dlast.cpp  dlast.h  dpainter.cpp  dpainter.h  dplayermpc.cpp  dplayermpc.h  dpreview.cpp  dpreview.h  droparea.cpp  droparea.h  dsettings.cpp  dsettings.h  dtaskbar.cpp  dtaskbar.h  dtrayicon.cpp  (+10 more)
src/filters/: monochrome.cpp  monochrome.h  negative.cpp  negative.h  original.cpp  original.h
ui/: dfilter.ui  dgallery.ui  dhighlighter.ui  dlast.ui  dpreview.ui  dscreenselect.ui  dsettings.ui  dupload.ui  dwebcam.ui  dwebcamselect.ui
